# c_meson_build

./: README.md  meson.build
include/: snd_file.h
src/: main.c  main2.c  snd_file.c
